--- a/Public/chat.html
+++ b/Public/chat.html
@@ -9,15 +9,22 @@
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
+    <!-- importing styles -->
     <link rel="stylesheet" href="css/style.css" />
     <title>ChatCord App</title>
   </head>
+
+  <!-- Chat room -->
   <body>
+
     <div class="chat-container">
+        <!-- header with a buttom to leave -->
       <header class="chat-header">
         <h1><i class="fas fa-smile"></i> ChatCord</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
+
+      <!-- this is the side nave with the room name and a list of users -->
       <main class="chat-main">
         <div class="chat-sidebar">
           <h3><i class="fas fa-comments"></i> Room Name:</h3>
@@ -25,8 +32,10 @@
           <h3><i class="fas fa-users"></i> Users</h3>
           <ul id="users"></ul>
         </div>
+        <!-- this is where all the messages will go to -->
         <div class="chat-messages"></div>
       </main>
+      <!-- This form simply contains the input and button to submit a message -->
       <div class="chat-form-container">
         <form id="chat-form">
           <input
@@ -41,11 +50,13 @@
       </div>
     </div>
 
+    <!-- looks like we will be using some js for animations?  -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
       integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
       crossorigin="anonymous"
     ></script>
+    <!-- linking the socket io scrpts and our main js file -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
