--- a/Public/index.html
+++ b/Public/index.html
@@ -10,9 +10,12 @@
 			integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
 			crossorigin="anonymous"
 		/>
+        <!-- linking the css -->
 		<link rel="stylesheet" href="css/style.css" />
 		<title>ChatCord App</title>
 	</head>
+
+    <!-- body includes basic form for sign up and to choose a room -->
 	<body>
 		<div class="join-container">
 			<header class="join-header">
